infra/k8s/ia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ia-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ia.hospedeiaonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ia
                port:
                  number: 4000
  tls:
    - hosts:
        - ia.hospedeiaonline.com
      secretName: ia-tls-cert
