infra/k8s/messenger-whatsapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-whatsapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: gce
  tls:
    - hosts:
        - messenger-whatsapp.hospedeiaonline.com
      secretName: messenger-whatsapp-tls-cert
  rules:
    - host: messenger-whatsapp.hospedeiaonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messenger-whatsapp
                port:
                  number: 3000
